--- a/hoeveel.html
+++ b/hoeveel.html
@@ -44,8 +44,8 @@
 </table>
 
 
-<p><strong>Gezinskorting</strong> = 15 % op het laagste tarief</p>
-<p><strong>2e les korting</strong> = 20 %  op het laagste tarief</p>
+<p><strong>Gezinskorting</strong> = 15% op het laagste tarief</p>
+<p><strong>2e les korting</strong> = 20%  op het laagste tarief</p>
 <p><strong>Studentenkorting</strong> = 20% (met kopie van de collegekaart)</p>
 <p>(er kan per leerling van 1 kortingsmogelijkheid gebruik worden gemaakt)</p>
 </section><section><h2 id="korte-cursusindien-aangeboden">Korte cursus.(indien aangeboden)</h2>
@@ -62,7 +62,7 @@
 </section><section><h2 id="dans-projecten">Dans Projecten</h2>
 <p>Dans projecten worden apart aangekondigd en kunnen varieren in prijs afhankelijk van de duur van het project.</p>
 </section><section><h2 id="betalings-regeling">Betalings regeling:</h2>
-<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Vraag gerust!  Mailen kan naar:<a href="mailto:&#x62;&#97;&#98;&#x73;&#x40;&#x62;&#97;&#98;&#x73;&#x62;&#97;&#x6c;&#108;&#x65;&#116;&#115;&#x63;&#104;&#x6f;&#111;&#x6c;&#x2e;&#x6e;&#108;">&#x62;&#97;&#98;&#x73;&#x40;&#x62;&#97;&#98;&#x73;&#x62;&#97;&#x6c;&#108;&#x65;&#116;&#115;&#x63;&#104;&#x6f;&#111;&#x6c;&#x2e;&#x6e;&#108;</a> </p>
+<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Vraag gerust!  Mailen kan naar:<a href="mailto:&#x62;&#x61;&#x62;&#x73;&#64;&#98;&#x61;&#98;&#x73;&#98;&#97;&#108;&#x6c;&#x65;&#116;&#x73;&#99;&#104;&#x6f;&#111;&#x6c;&#x2e;&#110;&#108;">&#x62;&#x61;&#x62;&#x73;&#64;&#98;&#x61;&#98;&#x73;&#98;&#97;&#108;&#x6c;&#x65;&#116;&#x73;&#99;&#104;&#x6f;&#111;&#x6c;&#x2e;&#110;&#108;</a> </p>
 </section>
         </main>
         <footer>
