--- a/wanneer.html
+++ b/wanneer.html
@@ -33,38 +33,38 @@
         </header>
         <main class="">
             <div class="where"><span>wanneer</span></div>
-            <section><h1 id="rooster--jaarplanning--wanneer-zijn-de-lessen">Rooster &amp; Jaarplanning:  <img src="resources/image/algemeen/balletklok.jpg" alt="Wanneer zijn de lessen?"></h1>
-<p>Het <strong>dansrooster:</strong> vanaf 5 september.</p>
+            <section><h1 id="rooster--jaarplanning--wanneer-zijn-de-lessen---dansrooster-vanaf-26-augustus-2024">Rooster &amp; Jaarplanning:  <img src="resources/image/algemeen/balletklok.jpg" alt="Wanneer zijn de lessen?">   <strong>dansrooster:</strong> vanaf 26 augustus 2024</h1>
 <iframe width="100%" height="830px" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vShF9QZbzqdBX1DwUQt7uIn9LxF8yweI4VsvrOrb3roSnKl87zY4YpYFR7b0MnEGFycEXP7QUxEP8kx/pubhtml?gid=1911534545&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
 
-<p><strong>Jaarplanning:</strong></p>
-<p><strong>Workshop Dansweek 23</strong>       maandag 28 augustus 2023<br>(gratis proeflessen) </p>
-<p><strong>Paardenmarkt</strong>              maandag 4 september 2023
-(er zijn die dag geen lessen) </p>
-<p><strong>Open Dag</strong>                  zondag 10 september 2023
+<h1 id="jaarplanning"><strong>Jaarplanning:</strong></h1>
+<p><strong>opstart week 23</strong>       maandag 26 augustus 2024    </p>
+<p><strong>Open Dag</strong>                  zondag 1 september 2024
 Opening cultureel seizoen in samenwerking met Theater De KiK en muziekschool All Music. </p>
-<p><strong>Sjors Sportief week</strong>       25 t/m 29 september  2023
+<p><strong>Paardenmarkt</strong>              maandag 2 september 2024
+(er zijn die dag geen lessen) </p>
+<p><strong>Sjors Sportief week</strong>       9 t/m 13 september  2024
 (via Sjors Sportief doen kinderen uit omgeving proeflessen mee)</p>
-<p><strong>Herfstvakantie</strong>             16 t/m 20 oktober 2023
+<p><strong>Herfstvakantie</strong>            21 t/m 25 oktober 2024
 (in de vakantie zijn er geen lessen)</p>
-<p> <strong>Kijk-lessen</strong>               20 t/m 24 november 2023<br>(familie en vrienden kunnen een les komen bekijken)</p>
-<p><strong>Pakjesavond</strong>                 5 december 2023
+<p> <strong>Kijk-lessen</strong>               2nog onbekend<br>(familie en vrienden kunnen een les komen bekijken)</p>
+<p><strong>Pakjesavond</strong>                 5 december 2024
 (vanaf 18:00 vervallen de lessen) </p>
-<p><strong>Mini-Voorstelling &#39;Winter&#39;</strong>  16 december 2023
-(enkele groepen zullen optredens verzorgen) </p>
-<p><strong>Kerstvakantie</strong>               25 december 2023 t/m 5 januari 2024<br>(in de vakantie zijn er geen lessen)</p>
-<p><strong>Verkleed lessen</strong>             5 t/ 9 februari 2024<br>(Kom verkleed naar de lessen deze week!)</p>
-<p><strong>Carnavalsvakantie</strong>          12 februari t/m 16 februari 2024<br>(in de vakantie zijn er geen lessen)</p>
-<p><strong>Vriendenlessen</strong>             19 t/m 23 februari 2024
+<p><strong>Kerstvakantie</strong>               23 december 2024 t/m 3 januari 2025<br>(in de vakantie zijn er geen lessen)</p>
+<p><strong>Verkleed lessen</strong>             24 t/ 28 februari 2025<br>(Kom verkleed naar de lessen deze week!)</p>
+<p><strong>Carnavalsvakantie</strong>          3 t/m 7 maart 2025<br>(in de vakantie zijn er geen lessen)</p>
+<p><strong>Vriendenlessen</strong>             nog onbekend
 leerlingen mogen een vriend(in) meenemen naar de les om hen te laten ervaren hoe leuk dansen is! </p>
-<p><strong>2e Paasdag</strong>                  maandag 1 april 2024<br>(dit is een vrije dag, er zijn geen lessen) </p>
-<p><strong>Meivakantie</strong>                  29 april t/m 10 mei 2024<br>(in de vakantie zijn er geen lessen)</p>
-<p><strong>2e Pinksterdag</strong>              maandag 20 mei 2024<br>(dit is een vrije dag, er zijn geen lessen) </p>
-<p><strong>Open Podium</strong>                 25 mei 2024 14:00 
-(Maak je eigen choreo en nodig al je publiek uit om te komen kijken!) </p>
-<p><strong>Orientatie week</strong>             24 juni t/m 28 juni 2024<br>(Kinderen uit de K4 groepen (diploma groep) mogen in andere lessen orienteren welke dansstijl zij volgend seizoen willen kiezen)</p>
-<p> <strong>Diploma lessen</strong>              1 t/m 5 juli 2024<br>(Oudste kleuters uit K1 en oudste kindergroep K4 ontvangen hun diploma&#39;s. Familie en vrienden mogen hierbij aanwezig zijn!) </p>
-<p><strong>Zomervakantie</strong>                vanaf 8 juli 2024<br>(in de vakantie zijn er geen lessen)</p>
+<p><strong>Paasvakantie</strong>                  21 april t/m 2 mei 2025<br>(in de vakantie zijn er geen lessen)</p>
+<p><strong>Hemelvaart</strong>                 donderdag 29 &amp; vrijdag 30 mei 2025
+(er zijn dan geen lessen) </p>
+<p><strong>2e Pinksterdag</strong>              maandag 9 juni 2025
+(dit is een vrije dag, er zijn geen lessen) </p>
+<p>**Generale repetitie **         dinsdag 10 juni 2025<br> (va 15:00)</p>
+<p><strong>Voorstelling in Musis Sacrum Arnhem</strong> zaterdag 14 juni 2025
+(hele dag) </p>
+<p><strong>Orientatie week</strong>             16 juni t/m 20 juni 2025<br>(Kinderen uit de K4 groepen (diploma groep) mogen in andere lessen orienteren welke dansstijl zij volgend seizoen willen kiezen)</p>
+<p> <strong>Diploma lessen</strong>              23 juni t/m 27 juni 2025<br>(Oudste kleuters uit K1 en oudste kindergroep K4 ontvangen hun diploma&#39;s. Familie en vrienden mogen hierbij aanwezig zijn!) </p>
+<p><strong>Zomervakantie</strong>                vanaf 30 juni 2025<br>(in de vakantie zijn er geen lessen)</p>
 <h1 id="--sommige-vakantiesvrije-dagen-kunnen-afwijken-van-de-schoolvakanties">! ( sommige vakanties/vrije dagen kunnen afwijken van de schoolvakanties)</h1>
 <p><strong>Wijzigingen voorbehouden!</strong></p>
 </section>
