--- a/wanneer.html
+++ b/wanneer.html
@@ -38,7 +38,7 @@
 <iframe width="100%" height="830px" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vShF9QZbzqdBX1DwUQt7uIn9LxF8yweI4VsvrOrb3roSnKl87zY4YpYFR7b0MnEGFycEXP7QUxEP8kx/pubhtml?gid=1911534545&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
 
 <h1 id="jaarplanning"><strong>Jaarplanning:</strong></h1>
-<p><strong>opstart week 23</strong>       maandag 26 augustus 2024    </p>
+<p><strong>opstart week</strong>             maandag 26 augustus 2024    </p>
 <p><strong>Open Dag</strong>                  zondag 1 september 2024<br>(Opening cultureel seizoen in samenwerking met Theater De KiK en muziekschool All Music.) </p>
 <p><strong>Paardenmarkt</strong>              maandag 2 september 2024
 (er zijn die dag geen lessen) </p>
@@ -54,7 +54,7 @@
 <p><strong>Carnavalsvakantie</strong>          3 t/m 7 maart 2025<br>(in de vakantie zijn er geen lessen)</p>
 <p><strong>Vriendenlessen</strong>             nog onbekend
 leerlingen mogen een vriend(in) meenemen naar de les om hen te laten ervaren hoe leuk dansen is! </p>
-<p><strong>Paasvakantie</strong>                  21 april t/m 2 mei 2025<br>(in de vakantie zijn er geen lessen)</p>
+<p><strong>Paasvakantie</strong>                21 april t/m 2 mei 2025<br>(in de vakantie zijn er geen lessen)</p>
 <p><strong>Hemelvaart</strong>                 donderdag 29 &amp; vrijdag 30 mei 2025
 (er zijn dan geen lessen) </p>
 <p><strong>2e Pinksterdag</strong>              maandag 9 juni 2025
@@ -62,8 +62,8 @@ leerlingen mogen een vriend(in) meenemen naar de les om hen te laten ervaren hoe
 <p>**Generale repetitie **         dinsdag 10 juni 2025<br> (va 15:00)</p>
 <p><strong>Voorstelling in Musis Sacrum Arnhem</strong> zaterdag 14 juni 2025
 (hele dag) </p>
-<p><strong>Orientatie week</strong>             16 juni t/m 20 juni 2025<br>(Kinderen uit de K4 groepen (diploma groep) mogen in andere lessen orienteren welke dansstijl zij volgend seizoen willen kiezen)</p>
-<p> <strong>Diploma lessen</strong>              23 juni t/m 27 juni 2025<br>(Oudste kleuters uit K1 en oudste kindergroep K4 ontvangen hun diploma&#39;s. Familie en vrienden mogen hierbij aanwezig zijn!) </p>
+<p><strong>Orientatie week</strong>              16 juni t/m 20 juni 2025<br>(Kinderen uit de K4 groepen (diploma groep) mogen in andere lessen orienteren welke dansstijl zij volgend seizoen willen kiezen)</p>
+<p> <strong>Diploma lessen</strong>               23 juni t/m 27 juni 2025<br>(Oudste kleuters uit K1 en oudste kindergroep K4 ontvangen hun diploma&#39;s. Familie en vrienden mogen hierbij aanwezig zijn!) </p>
 <p><strong>Zomervakantie</strong>                vanaf 30 juni 2025<br>(in de vakantie zijn er geen lessen)</p>
 <h1 id="--sommige-vakantiesvrije-dagen-kunnen-afwijken-van-de-schoolvakanties">! ( sommige vakanties/vrije dagen kunnen afwijken van de schoolvakanties)</h1>
 <p><strong>Wijzigingen voorbehouden!</strong></p>
