--- a/hoeveel.html
+++ b/hoeveel.html
@@ -38,7 +38,7 @@
 <h2 id="reguliere-lessen--volledig-dansseizoen-2024-2025-zijn---38-lessen">Reguliere lessen = volledig dansseizoen (2024-2025 zijn +/- 38 lessen)</h2>
 <table>
 <tr><td>4 t/m 5 jaar:</td><td>€225,- per seizoen (45 min. 1 les per week)</td></tr>
-<tr><td>6 t/m 17 jaar:</td><td>€265,- per seizoen (60 min. 1 les per week)</td></tr>
+<tr><td>6 t/m 17 jaar:</td><td>€267,- per seizoen (60 min. 1 les per week)</td></tr>
 <tr><td>18 jaar en ouder:</td><td>€305,- per seizoen (60 min.1 les per week)</td></tr>
 <tr><td>extra Spitzen (15 min.):</td><td>€58,- per seizoen. (aansluitend a.d. les & in overleg) Hierop krijgt u geen korting.</td></tr>
 </table>
@@ -62,7 +62,7 @@
 </section><section><h2 id="dans-projecten">Dans Projecten</h2>
 <p>Dans projecten worden apart aangekondigd en kunnen varieren in prijs afhankelijk van de duur van het project.</p>
 </section><section><h2 id="betalings-regeling">Betalings regeling:</h2>
-<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Vraag gerust!  Mailen kan naar:<a href="mailto:&#98;&#x61;&#98;&#x73;&#64;&#98;&#x61;&#98;&#115;&#98;&#97;&#x6c;&#108;&#101;&#x74;&#115;&#99;&#x68;&#111;&#x6f;&#108;&#x2e;&#110;&#x6c;">&#98;&#x61;&#98;&#x73;&#64;&#98;&#x61;&#98;&#115;&#98;&#97;&#x6c;&#108;&#101;&#x74;&#115;&#99;&#x68;&#111;&#x6f;&#108;&#x2e;&#110;&#x6c;</a> </p>
+<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Vraag gerust!  Mailen kan naar:<a href="mailto:&#98;&#x61;&#x62;&#x73;&#x40;&#x62;&#x61;&#x62;&#x73;&#98;&#97;&#108;&#x6c;&#101;&#116;&#115;&#99;&#104;&#111;&#x6f;&#x6c;&#x2e;&#x6e;&#x6c;">&#98;&#x61;&#x62;&#x73;&#x40;&#x62;&#x61;&#x62;&#x73;&#98;&#97;&#108;&#x6c;&#101;&#116;&#115;&#99;&#104;&#111;&#x6f;&#x6c;&#x2e;&#x6e;&#x6c;</a> </p>
 </section>
         </main>
         <footer>
