--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         </header>
         <main class="">
             <div class="where"><span>home</span></div>
-            <section><h1 id="zomerstop">Zomerstop</h1>
-<p><a href="resources/image/algemeen/zomervakantie.JPG.jpg">Zomervakantie bij Babs Balletschool</a> 
+            <section></section><section><h1 id="zomerstop">Zomerstop</h1>
+<p><img src="resources/image/algemeen/zomervakantie.JPG.jpg" alt="Zomervakantie bij Babs Balletschool"> 
 Tijdens de zomermaanden zijn er geen lessen. 
 De administratie is gesloten van 15 juli t/m 7 augustus.
 Een hele mooie zomer gewenst en tot dans in augustus! </p>
