--- a/kleding.html
+++ b/kleding.html
@@ -139,7 +139,7 @@
 <p>*evt. personalized met je eigen naam voor €2,50 extra.</p>
 <p>evt is ook te bestellen; cropped shirts/legging/ tshirt lange mouw.</p>
 <p>te bestellen in zwart in diverse maten.
-bestel via <a href="mailto:&#x62;&#x61;&#98;&#115;&#64;&#x62;&#97;&#x62;&#115;&#x62;&#x61;&#108;&#x6c;&#101;&#x74;&#115;&#x63;&#104;&#111;&#111;&#108;&#x2e;&#110;&#108;">&#x62;&#x61;&#98;&#115;&#64;&#x62;&#97;&#x62;&#115;&#x62;&#x61;&#108;&#x6c;&#101;&#x74;&#115;&#x63;&#104;&#111;&#111;&#108;&#x2e;&#110;&#108;</a> </p>
+bestel via <a href="mailto:&#x62;&#97;&#x62;&#115;&#64;&#98;&#x61;&#98;&#x73;&#98;&#97;&#108;&#x6c;&#101;&#116;&#115;&#x63;&#x68;&#111;&#111;&#x6c;&#x2e;&#110;&#108;">&#x62;&#97;&#x62;&#115;&#64;&#98;&#x61;&#98;&#x73;&#98;&#97;&#108;&#x6c;&#101;&#116;&#115;&#x63;&#x68;&#111;&#111;&#x6c;&#x2e;&#110;&#108;</a> </p>
 </section><section><h1 id="hoe-maak-ik-een-balletknotje">Hoe maak ik een balletknotje</h1>
 <img class="inline" src="resources/image/algemeen/knotje%20maken%202jpg.jpg" alt="Kledingvoorschrift Babs Balletschool">
 
