--- a/index.html
+++ b/index.html
@@ -33,26 +33,26 @@
         </header>
         <main class="">
             <div class="where"><span>home</span></div>
-            <section></section><section><h1 id="zomer">Zomer</h1>
+            <section><h1 id="zomer">Zomer</h1>
 <p><img src="resources/image/algemeen/zomervakantie.JPG.jpg" alt="Zomervakantie bij Babs Balletschool"> 
-Tijdens de zomermaanden zijn er geen lessen. 
-De administratie is gesloten van 15 juli t/m 7 augustus.
+Tijdens de zomermaanden zijn er geen lessen.</p>
+<p> De administratie is gesloten van 15 juli t/m 7 augustus.
 Een hele mooie zomer gewenst en tot dans in augustus! </p>
 </section><section><h1 id="dans-plezier">Dans plezier</h1>
-<p>Plezier in dansen is er voor groot en klein. <img src="resources/image/algemeen/kinderballet%20(2).JPG" alt="dansplezier bij Babs Balletschool"> 
+<p> Plezier in dansen is er voor groot en klein. <img src="resources/image/algemeen/kinderballet%20(2).JPG" alt="dansplezier bij Babs Balletschool"> 
 Wil je dit zelf ervaren? Vanaf 26 augustus kun je vrijblijvend proeflessen komen doen. Stuur een mail voor het aanvragen van een proefles <a href="mailto:babs@babsballetschool.nl">contact</a></p>
 </section><section><h1 id="dansrooster--jaarplanning">Dansrooster &amp; jaarplanning</h1>
-<p>Nieuw rooster seizoen 24-25:
+<p> Nieuw rooster seizoen 24-25:
 <img src="resources/image/algemeen/balletklok.jpg" alt="dansrooster 2024-2025 bij Babs Balletschool"> 
 <a href="https://www.babsballetschool.nl/wanneer.html">Rooster 2024-2025</a></p>
-<p>Inschrijven voor seizoen 24-25:
+<p> Inschrijven voor seizoen 24-25:
 <a href="https://docs.google.com/forms/d/e/1FAIpQLScKKMDE3qj1KcmIxWGIdN7Re943kAck9iCVdcWpYOsYjp8lLA/viewform?usp=sf_link">Inschrijfformulier</a></p>
 </section><section><h1 id="ballet-spelletje-balletris">Ballet Spelletje Balletris</h1>
 <p><img src="resources/image/balletris/babsballetschool-logo.gif" alt="dansplezier bij Babs Balletschool"> 
- Typ deze code in op je toetsenbord:  ⬆⬆⬇⬇⬅➡⬅➡ ba    </p>
+  Typ deze code in op je toetsenbord:  ⬆⬆⬇⬇⬅➡⬅➡ ba    </p>
 </section><section><h1 id="floor-of-fame">Floor of Fame</h1>
 <p><img src="resources/image/algemeen/floor-of-fame-foto.jpg" alt="Floor of Fame Babs Balletschool"> 
-Onze vloer is een feit met dank aan alle lieve dansers, fans en de sponsor Go Cybersafe.</p>
+ Onze vloer is een feit met dank aan alle lieve dansers, fans en de sponsor Go Cybersafe.</p>
 <p>*<a href="resources/image/algemeen/Logo-go-cybersafe.png">GoCybersafe</a> </p>
 </section>
         </main>
