--- a/hoeveel.html
+++ b/hoeveel.html
@@ -45,6 +45,7 @@
 
 <tr><td>Pilates:</td><td>     60 min  €331,- per jaar - €33,10 per maand </td></tr>
 
+
 <tr><td>extra Spitzen:</td><td> 15 min. €60,- per jaar - €6,- per maand.(aansluitend a.d. les & in overleg) Hierop krijgt u geen korting.</td></tr>
 </table>
 
@@ -67,7 +68,7 @@
 </section><section><h2 id="dans-projecten">Dans Projecten</h2>
 <p>Dans projecten worden apart aangekondigd en kunnen varieren in prijs afhankelijk van de duur van het project.</p>
 </section><section><h2 id="betalings-regeling">Betalings regeling:</h2>
-<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Vraag gerust!  Mailen kan naar:<a href="mailto:&#98;&#x61;&#98;&#x73;&#64;&#x62;&#x61;&#x62;&#115;&#x62;&#x61;&#x6c;&#108;&#101;&#x74;&#115;&#x63;&#x68;&#x6f;&#111;&#108;&#x2e;&#x6e;&#108;">&#98;&#x61;&#98;&#x73;&#64;&#x62;&#x61;&#x62;&#115;&#x62;&#x61;&#x6c;&#108;&#101;&#x74;&#115;&#x63;&#x68;&#x6f;&#111;&#108;&#x2e;&#x6e;&#108;</a> 
+<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Vraag gerust!  Mailen kan naar:<a href="mailto:&#x62;&#97;&#98;&#115;&#x40;&#x62;&#x61;&#98;&#x73;&#x62;&#97;&#108;&#x6c;&#x65;&#116;&#x73;&#x63;&#104;&#x6f;&#111;&#108;&#x2e;&#110;&#x6c;">&#x62;&#97;&#98;&#115;&#x40;&#x62;&#x61;&#98;&#x73;&#x62;&#97;&#108;&#x6c;&#x65;&#116;&#x73;&#x63;&#104;&#x6f;&#111;&#108;&#x2e;&#110;&#x6c;</a> 
 Babs Balletschool is ook deelnemer aan de Gelrepas:  <a href="https://www.gelrepas.nl/aanbod/5000-babs-balletschool">https://www.gelrepas.nl/aanbod/5000-babs-balletschool</a></p>
 </section>
         </main>
