--- a/jazz.html
+++ b/jazz.html
@@ -39,7 +39,7 @@
 Instromen is zeker nog mogelijk. </p>
 <p><strong>Jazzballet tieners</strong> De Jazzballet lessen voor tieners zijn er op maandag voor 9+ en 12+ en op donderdag voor 15+. 
  De docenten gaan aan de slag met techniek en danscombinaties zodat de dansers zich kunnen uitleven in dans, expressie en energie.</p>
-<p>Vraag een proefles aan via mailto:<a href="mailto:&#x62;&#x61;&#98;&#115;&#64;&#98;&#x61;&#98;&#x73;&#98;&#97;&#108;&#x6c;&#101;&#x74;&#115;&#x63;&#x68;&#x6f;&#x6f;&#x6c;&#46;&#x6e;&#x6c;">&#x62;&#x61;&#98;&#115;&#64;&#98;&#x61;&#98;&#x73;&#98;&#97;&#108;&#x6c;&#101;&#x74;&#115;&#x63;&#x68;&#x6f;&#x6f;&#x6c;&#46;&#x6e;&#x6c;</a></p>
+<p>Vraag een proefles aan via mailto:<a href="mailto:&#98;&#x61;&#98;&#x73;&#x40;&#x62;&#97;&#x62;&#115;&#x62;&#97;&#x6c;&#x6c;&#x65;&#116;&#x73;&#99;&#x68;&#x6f;&#x6f;&#x6c;&#x2e;&#x6e;&#108;">&#98;&#x61;&#98;&#x73;&#x40;&#x62;&#97;&#x62;&#115;&#x62;&#97;&#x6c;&#x6c;&#x65;&#116;&#x73;&#99;&#x68;&#x6f;&#x6f;&#x6c;&#x2e;&#x6e;&#108;</a></p>
 </section>
         </main>
         <footer>
