--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@ Wil je dit zelf ervaren? Kom vrijblijvend een proefles doen. Stuur een mail voor
 </section><section><h1 id="ballet-volwassenen-intermediate">Ballet volwassenen Intermediate</h1>
 <p><img src="resources/image/Sprong.png" alt="dansplezier bij Babs Balletschool"> 
 Op maandagochtend starten we een korte cursus ballet voor volwassenen,  dit is een les voor dansers met al eerdere balletervaring. 
-Aanmelden kan via de mail: <a href="mailto:&#x62;&#97;&#98;&#115;&#x40;&#x62;&#97;&#98;&#115;&#98;&#x61;&#108;&#108;&#x65;&#116;&#115;&#99;&#104;&#x6f;&#x6f;&#x6c;&#46;&#110;&#x6c;">&#x62;&#97;&#98;&#115;&#x40;&#x62;&#97;&#98;&#115;&#98;&#x61;&#108;&#108;&#x65;&#116;&#115;&#99;&#104;&#x6f;&#x6f;&#x6c;&#46;&#110;&#x6c;</a></p>
+Aanmelden kan via de mail: <a href="mailto:&#98;&#x61;&#x62;&#115;&#64;&#x62;&#97;&#x62;&#x73;&#x62;&#97;&#108;&#x6c;&#101;&#116;&#x73;&#x63;&#x68;&#111;&#x6f;&#x6c;&#46;&#x6e;&#x6c;">&#98;&#x61;&#x62;&#115;&#64;&#x62;&#97;&#x62;&#x73;&#x62;&#97;&#108;&#x6c;&#101;&#116;&#x73;&#x63;&#x68;&#111;&#x6f;&#x6c;&#46;&#x6e;&#x6c;</a></p>
 </section><section><h1 id="ballet-beginners-15">Ballet beginners 15+</h1>
 <p><img src="resources/image/algemeen/KLassiekballettieners.jpg" alt="Ballet tieners bij Babs Balletschool"> 
 Voor dansers die altijd al ballet hebben willen leren, of hun danstechniek willen versterken met een klassieke basis. 
-Start vanaf 1 september 16:45. Proefles is gratis. Aanmelden via de mail: <a href="mailto:&#98;&#97;&#x62;&#115;&#64;&#98;&#97;&#98;&#x73;&#98;&#97;&#x6c;&#x6c;&#x65;&#116;&#x73;&#99;&#104;&#111;&#x6f;&#108;&#46;&#110;&#108;">&#98;&#97;&#x62;&#115;&#64;&#98;&#97;&#98;&#x73;&#98;&#97;&#x6c;&#x6c;&#x65;&#116;&#x73;&#99;&#104;&#111;&#x6f;&#108;&#46;&#110;&#108;</a></p>
+Start vanaf 1 september 16:45. Proefles is gratis. Aanmelden via de mail: <a href="mailto:&#98;&#x61;&#x62;&#x73;&#x40;&#98;&#x61;&#x62;&#x73;&#98;&#97;&#x6c;&#x6c;&#101;&#x74;&#x73;&#99;&#x68;&#x6f;&#111;&#x6c;&#x2e;&#110;&#108;">&#98;&#x61;&#x62;&#x73;&#x40;&#98;&#x61;&#x62;&#x73;&#98;&#97;&#x6c;&#x6c;&#101;&#x74;&#x73;&#99;&#x68;&#x6f;&#111;&#x6c;&#x2e;&#110;&#108;</a></p>
 </section><section><h1 id="pilates-op-mat">Pilates op mat</h1>
 <p><img src="resources/image/algemeen/Pilates.JPG" alt="Pilates bij Babs Balletschool"> 
 Pilates bestaat uit een serie oefeningen die je op een mat kunt uitvoeren.
