--- a/hoeveel.html
+++ b/hoeveel.html
@@ -70,7 +70,7 @@
 </section><section><h2 id="dans-projecten">Dans Projecten</h2>
 <p>Dans projecten worden apart aangekondigd en kunnen varieren in prijs afhankelijk van de duur van het project.</p>
 </section><section><h2 id="betalings-regeling">Betalings regeling:</h2>
-<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Vraag gerust!  Mailen kan naar:<a href="mailto:&#98;&#97;&#x62;&#x73;&#x40;&#98;&#x61;&#x62;&#115;&#98;&#x61;&#x6c;&#x6c;&#x65;&#116;&#115;&#x63;&#x68;&#x6f;&#x6f;&#108;&#46;&#110;&#x6c;">&#98;&#97;&#x62;&#x73;&#x40;&#98;&#x61;&#x62;&#115;&#98;&#x61;&#x6c;&#x6c;&#x65;&#116;&#115;&#x63;&#x68;&#x6f;&#x6f;&#108;&#46;&#110;&#x6c;</a> 
+<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Vraag gerust!  Mailen kan naar:<a href="mailto:&#x62;&#x61;&#98;&#x73;&#x40;&#x62;&#x61;&#98;&#x73;&#x62;&#97;&#108;&#108;&#101;&#x74;&#x73;&#x63;&#x68;&#111;&#111;&#x6c;&#46;&#x6e;&#x6c;">&#x62;&#x61;&#98;&#x73;&#x40;&#x62;&#x61;&#98;&#x73;&#x62;&#97;&#108;&#108;&#101;&#x74;&#x73;&#x63;&#x68;&#111;&#111;&#x6c;&#46;&#x6e;&#x6c;</a> 
 Babs Balletschool is ook deelnemer aan de Gelrepas:  <a href="https://www.gelrepas.nl/aanbod/5000-babs-balletschool">https://www.gelrepas.nl/aanbod/5000-babs-balletschool</a></p>
 </section>
         </main>
