--- a/wanneer.html
+++ b/wanneer.html
@@ -36,8 +36,7 @@
             <section><h1 id="rooster--jaarplanning--wanneer-zijn-de-lessen">Rooster &amp; Jaarplanning:  <img src="resources/image/algemeen/balletklok.jpg" alt="Wanneer zijn de lessen?"></h1>
 <p> <strong>dansrooster:</strong> vanaf 25 augustus 2025</p>
 <iframe width="100%" height="830px" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vShF9QZbzqdBX1DwUQt7uIn9LxF8yweI4VsvrOrb3roSnKl87zY4YpYFR7b0MnEGFycEXP7QUxEP8kx/pubhtml?gid=1911534545&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
-
-<h1 id="jaarplanning"><strong>Jaarplanning:</strong></h1>
+</section><section><h1 id="jaarplanning"><strong>Jaarplanning:</strong></h1>
 <p><strong>1e lesweek</strong>
                 maandag 25 augustus 2025   </p>
 <p><strong>Open Dag</strong>
